--- a/nginx-application.yaml
+++ b/nginx-application.yaml
@@ -13,8 +13,8 @@ spec:
   project: default
   source:
     path: charts/nginx
-    repoURL: https://github.com/timtsoitt/argocd-proxy-charts
-    targetRevision: testing
+    repoURL: https://github.com/k8sVoodoo/argocd-sealed-secrets.git
+    targetRevision: main
 
   syncPolicy:
     automated: # automated sync by default retries failed attempts 5 times with following delays between attempts ( 5s, 10s, 20s, 40s, 80s ); retry controlled using `retry` field.
