--- a/charts/nginx/Chart.yaml
+++ b/charts/nginx/Chart.yaml
@@ -1,10 +1,10 @@
-apiVersion: v2
 name: nginx
-description: A Helm chart for Kubernetes
-version: 1.0.0
-appVersion: "1.19.10"
-type: application
+apiVersion: v2
+version: "0.0.1"
+appVersion: "0.0.1"
 
 dependencies:
   - name: nginx
-    repository: https://github.com/nginx/nginx
+    version: 0.0.1
+    repository: "https://raw.githubusercontent.com/timtsoitt/argocd-base-charts/main/releases"
+
