--- a/nginx-application.yaml
+++ b/nginx-application.yaml
@@ -14,7 +14,7 @@ spec:
   source:
     path: charts/nginx
     repoURL: https://github.com/k8sVoodoo/argocd-sealed-secrets.git
-    targetRevision: main
+    targetRevision: testing
 
   syncPolicy:
     automated: # automated sync by default retries failed attempts 5 times with following delays between attempts ( 5s, 10s, 20s, 40s, 80s ); retry controlled using `retry` field.
